// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollaborationLink renders correctly to match snapshot when there is a collaboration link 1`] = `
<div
  className="makeStyles-collaborationLink-5"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-collaborationLinkHeading-6"
  >
    Collaboration Link
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    variant="body1"
  >
    <a
      href="https://testlab.test-datalabs.nerc.ac.uk"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://testlab.test-datalabs.nerc.ac.uk
    </a>
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`CollaborationLink renders correctly to match snapshot when there is not a collaboration link 1`] = `""`;

exports[`ProjectInfoContainer renders correctly passing correct props to children 1`] = `
<PureProjectInfoContainer
  currentProject={
    Object {
      "fetching": false,
      "value": Object {
        "collaborationLink": "https://testlab.test-datalabs.nerc.ac.uk",
        "description": "A description about Test Project.",
        "key": "testproj",
        "name": "Test Project",
      },
    }
  }
/>
`;

exports[`PureProjectInfoContainer renders correctly to match snapshot when there is a collaboration link 1`] = `
<PromisedContentWrapper
  promise={
    Object {
      "fetching": false,
      "value": Object {
        "collaborationLink": "https://testlab.test-datalabs.nerc.ac.uk",
        "description": "A description about Test Project.",
        "key": "testproj",
        "name": "Test Project",
      },
    }
  }
>
  <div>
    <div
      className="makeStyles-projectTitleWrapper-3"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-projectTitle-1"
        variant="h5"
      >
        Test Project
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfoSpan
        className="makeStyles-ResourceInfoSpan-4"
      >
        (testproj)
      </ResourceInfoSpan>
    </div>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-description-2"
      variant="body1"
    >
      A description about Test Project.
    </WithStyles(ForwardRef(Typography))>
    <CollaborationLink
      link="https://testlab.test-datalabs.nerc.ac.uk"
    />
    <div
      className="makeStyles-userBlock-7"
    >
      <div>
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="admin"
          users={Array []}
        />
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="user"
          users={
            Array [
              Object {
                "name": "user1@test",
                "role": "user",
                "userId": "user1",
              },
            ]
          }
        />
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="viewer"
          users={Array []}
        />
      </div>
    </div>
  </div>
</PromisedContentWrapper>
`;

exports[`PureProjectInfoContainer renders correctly to match snapshot when there is not a collaboration link 1`] = `
<PromisedContentWrapper
  promise={
    Object {
      "fetching": false,
      "value": Object {
        "collaborationLink": undefined,
        "description": "A description about Test Project.",
        "key": "testproj",
        "name": "Test Project",
      },
    }
  }
>
  <div>
    <div
      className="makeStyles-projectTitleWrapper-3"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-projectTitle-1"
        variant="h5"
      >
        Test Project
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfoSpan
        className="makeStyles-ResourceInfoSpan-4"
      >
        (testproj)
      </ResourceInfoSpan>
    </div>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-description-2"
      variant="body1"
    >
      A description about Test Project.
    </WithStyles(ForwardRef(Typography))>
    <CollaborationLink />
    <div
      className="makeStyles-userBlock-7"
    >
      <div>
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="admin"
          users={Array []}
        />
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="user"
          users={
            Array [
              Object {
                "name": "user1@test",
                "role": "user",
                "userId": "user1",
              },
            ]
          }
        />
        <UserBlock
          classes={
            Object {
              "ResourceInfoSpan": "makeStyles-ResourceInfoSpan-4",
              "chipTitle": "makeStyles-chipTitle-8",
              "collaborationLink": "makeStyles-collaborationLink-5",
              "collaborationLinkHeading": "makeStyles-collaborationLinkHeading-6",
              "description": "makeStyles-description-2",
              "projectTitle": "makeStyles-projectTitle-1",
              "projectTitleWrapper": "makeStyles-projectTitleWrapper-3",
              "userBlock": "makeStyles-userBlock-7",
            }
          }
          name="viewer"
          users={Array []}
        />
      </div>
    </div>
  </div>
</PromisedContentWrapper>
`;
